--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
     <title>YouTube Downloader</title>
 </head>
 <body>
-    <h1 class="heading">My Own YouTube Downloader !</h1>
+    <h1 class="heading">YouTube Downloader !</h1>
     <input class="URL-input" placeholder="Video URL e.g. https://www.youtube.com/watch?v=MtN1YnoL46Q">
-    <button class="convert-button">Convert</button>
+    <button class="convert-button">Convert Now</button>
 </body>
 </html>
