CREATED SCRIPT PAGE

--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     <h1 class="heading">YouTube Downloader !</h1>
     <input class="URL-input" placeholder="Video URL e.g. https://www.youtube.com/watch?v=MtN1YnoL46Q">
     <button class="convert-button">Convert Now</button>
+
+
+    <script src='script.js'></script>
 </body>
 </html>
